@@ -62,7 +62,7 @@ env = Environment(tools=['default','qt'],
                   ENV={'PATH':ENV_PATH,
                        'PATHEXT':os.environ.get('PATHEXT'),
                        'HOME':os.getcwd(),
-                       'SYSTEMROOT':ENV.get('SYSTEMROOT')},
+                       'SystemRoot':ENV.get('SystemRoot')},
                        # moc / uic want to write stuff in ~/.qt
                   CXXFILESUFFIX=".cpp")
 
